Standardize roles, reorganize APIs, and secure OAuth credentials